tests/ui/notransmute.rs
fn main() {
    let footransmutebar = 42; //~ ERROR NOOOOO
}